name:                caesar
version:             0.1.0.0
synopsis:            An implementation of the Caesar cipher
description:         See README
homepage:            https://github.com/rolandtritsch/haskell-caesar
license:             BSD3
license-file:        LICENSE
author:              Roland Tritsch
maintainer:          roland@tritsch.org
copyright:           2017 Roland Tritsch
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Caesar
  build-depends:     base >= 4.7 && < 5,
                     containers
  default-language:  Haskell2010

executable encrypt
  hs-source-dirs:    app
  main-is:           Encrypt.hs
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base,
                     caesar
  default-language:  Haskell2010

executable decrypt
  hs-source-dirs:    app
  main-is:           Decrypt.hs
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base,
                     caesar
  default-language:  Haskell2010

test-suite caesar-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base,
                     caesar,
                     hspec,
                     QuickCheck
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010

source-repository head
  type:              git
  location:          https://github.com/rolandtritsch/haskell-caesar
